syntax = "proto3";

package primes;

option go_package = "gRPC-Golang/primes/proto";

message PrimeRequest {
  int32 number = 1;
}

message PrimeResponse {
  int32 result = 1;
}

service PrimeService {
  rpc PrimeDecomposition (PrimeRequest) returns (stream PrimeResponse);
}